# Conflict-Mapper

./: .gitignore  2.py  CEFPython Interface.py  CSV_Cleanup.ipynb  Dash Interface.py  README.md  Ukraine_Interface.py  a.txt  app.py  icon-2.png:Zone.Identifier  lol.txt  new_test.py  pyproject.toml  requirements.txt  test.py
Assets/Infrastructure/CSV/: Airports.csv  Cities.csv  Cities1.csv  Cities2.csv  Infrastructure.csv
Assets/Infrastructure/RAW/: ciudades.csv  ua-airports.csv  (+1 more)
Assets/Queries/: Ciudades_news_count.csv  aeropuertos_news_count.csv
Assets/RSS/: urls.json
Assets/RSS/NEWS_CSV/: NewsCSV.csv
Current/: requirements.txt
Current/python_files/: queries.py  xml_puller_parser.py
Functions/: general_use_functions.py
Infraestructura/: Infrastructure_crawler.py
Infraestructura/CSV/: Aeropuertos.csv  Tipos_Infaestructura.csv
Infraestructura/RAW/: Aeropuertos_clean.csv
Interface/: Ukraine_Interface.py
Legacy/: Ukraine_Interface.py
Legacy/Infraestructura/: Infrastructure_crawler.py
Legacy/RSS/: RSS_puller_parser.py
Mapas/: mapper.py
Mapas/archivos mapas/: test.csv
Python/: Infrastructure_crawler.py  RSS_puller_parser.py  functions.py  libraries.py  mapper.py  queries.py
Python_files/: Infrastructure_crawler.py  RSS_puller_parser.py  functions.py  libraries.py  mapper.py  queries.py
RSS/: RSS_puller_parser.py  urls.json
RSS/NEWS_CSV/: NewsCSV.csv
Search/: queries.py
Search/Queried/: Aeropuertos_news_count.csv
python_files/: Geocoder_coords.py  Infrastructure_crawler.py  RSS_puller_parser.py  functions.py  libraries.py  mapper.py
(+192 files in other folders)
