[tool.poetry]
name = "conflict-mapper"
version = "0.1.0"
description = ""
authors = ["Juanjomarg <juanj.martinezg96@gmail.com>"]
readme = "README.md"
packages = [{include = "conflict_mapper"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
